fabric/testdata/out/ing_setanta-categories-staging-get-api-categories-id-admins.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-filter":"oauthTokeninfoAnyKV(\"realm\",
      \"/services\", \"realm\", \"/employees\") -\u003e enableAccessLog(2, 4, 5) -\u003e
      unverifiedAuditLog(\"https://identity.zalando.com/managed-id\") -\u003e oauthTokeninfoAllScope(\"uid\")
      -\u003e flowId(\"reuse\") -\u003e forwardToken(\"X-TokenInfo-Forward\", \"uid\",
      \"scope\", \"realm\")","zalando.org/skipper-predicate":"Weight(5) \u0026\u0026
      Path(\"/api/categories/:id\") \u0026\u0026 Method(\"GET\") \u0026\u0026 JWTPayloadAllKV(\"https://identity.zalando.com/realm\",
      \"users\") \u0026\u0026 JWTPayloadAnyKV(\"https://identity.zalando.com/managed-id\",
      \"vobrien\", \"https://identity.zalando.com/managed-id\", \"aalexandre\", \"https://identity.zalando.com/managed-id\",
      \"matgonzalez\", \"https://identity.zalando.com/managed-id\", \"xgallegopujo\",
      \"https://identity.zalando.com/managed-id\", \"wchung\", \"https://identity.zalando.com/managed-id\",
      \"dhunt\", \"https://identity.zalando.com/managed-id\", \"brcullen\", \"https://identity.zalando.com/managed-id\",
      \"psuchon\", \"https://identity.zalando.com/managed-id\", \"ralmeida\") \u0026\u0026
      Header(\"X-Forwarded-Proto\", \"https\")"},"labels":{"controller-uid":"945a1e7f-8660-420e-b369-1d8ead57aa21","deployment-id":"d-h26p2nh5mx6m64fwthngr496b","pipeline-id":"l-2fh11iwr97crmf1ps8xchjjbwk"},"name":"setanta-categories-staging-get-api-categories-id-admins","namespace":"default"},"spec":{"rules":[{"host":"setanta-categories-staging.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"setanta-categories-staging","servicePort":"http"},"pathType":"Implemen [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-filter: oauthTokeninfoAnyKV("realm", "/services", "realm",
      "/employees") -> enableAccessLog(2, 4, 5) -> unverifiedAuditLog("https://identity.zalando.com/managed-id")
      -> oauthTokeninfoAllScope("uid") -> flowId("reuse") -> forwardToken("X-TokenInfo-Forward",
      "uid", "scope", "realm")
    zalando.org/skipper-predicate: Weight(5) && Path("/api/categories/:id") && Method("GET")
      && JWTPayloadAllKV("https://identity.zalando.com/realm", "users") && JWTPayloadAnyKV("https://identity.zalando.com/managed-id",
      "vobrien", "https://identity.zalando.com/managed-id", "aalexandre", "https://identity.zalando.com/managed-id",
      "matgonzalez", "https://identity.zalando.com/managed-id", "xgallegopujo", "https://identity.zalando.com/managed-id",
      "wchung", "https://identity.zalando.com/managed-id", "dhunt", "https://identity.zalando.com/managed-id",
      "brcullen", "https://identity.zalando.com/managed-id", "psuchon", "https://identity.zalando.com/managed-id",
      "ralmeida") && Header("X-Forwarded-Proto", "https")
  creationTimestamp: "2019-12-16T16:19:08Z"
  generation: 1
  labels:
    controller-uid: 945a1e7f-8660-420e-b369-1d8ead57aa21
    deployment-id: d-h26p2nh5mx6m64fwthngr496b
    pipeline-id: l-2fh11iwr97crmf1ps8xchjjbwk
  name: setanta-categories-staging-get-api-categories-id-admins
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: setanta-categories-staging
    uid: 945a1e7f-8660-420e-b369-1d8ead57aa21
  resourceVersion: "1380519976"
  uid: b1f38ca7-4d9a-455f-b797-9db6fd3e9a17
spec:
  rules:
  - host: setanta-categories-staging.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: setanta-categories-staging
            port:
              name: http
        pathType: ImplementationSpecific
  - host: spp-categories-test.zalandoapis.com
    http:
      paths:
      - backend:
          service:
            name: setanta-categories-staging
            port:
              name: http
        pathType: ImplementationSpecific
  - host: categories.setanta-staging.zalan.do
    http:
      paths:
      - backend:
          service:
            name: setanta-categories-staging
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
